Render line-breaks in posts correctly

--- a/src/common/Post/css/index.scoped.css
+++ b/src/common/Post/css/index.scoped.css
@@ -83,6 +83,7 @@
 .content p {
   opacity: 0.7;
   margin-bottom: 20px;
+  white-space: break-spaces;
 }
 
 .actions {
